added the preferIpAddress and actuator settings to discovery

--- a/discovery-server.yml
+++ b/discovery-server.yml
@@ -1,9 +1,15 @@
 ﻿server:
   port: 8761
 
+management:
+  endpoints:
+    web:
+      exposure.include: '*'
+
 eureka:
   instance:
     hostname: localhost
+    preferIpAddress: true
   # standalone mode
   client:
     registerWithEureka: false
