--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -26,3 +26,16 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
+
+---
+---
+spring:
+  profiles: cloud
+  zipkin:
+    baseUrl: http://tracing-server:9411
+server:
+  port: ${PORT}
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://bens-discovery-server.apps.tas.workload.tkglab.tanzu-demo.net/eureka
