issues with discovery startup

--- a/discovery-server.yml
+++ b/discovery-server.yml
@@ -10,12 +10,11 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
 ---
 server:
   profiles: cloud
 eureka:
   instance:
-    hostname: ${vcap.application.uris[0]}
+    #hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
     preferIpAddress: true
