making dynamic port the default

--- a/customers-service.yml
+++ b/customers-service.yml
@@ -20,10 +20,8 @@ eureka:
 ---
 spring:
   profiles: cloud
-  zipkin:
-    baseUrl: http://tracing-server:9411
-server:
-  port: ${PORT}
+  # zipkin:
+  #   baseUrl: http://tracing-server:9411
 eureka:
   client:
     serviceUrl:
