--- a/admin-server.yml
+++ b/admin-server.yml
@@ -1,5 +1,6 @@
-server:
-  port: 9090
+spring:
+  profiles: default
+
 
 ---
 spring:
@@ -8,3 +9,13 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
+
+---
+spring:
+  profiles: cloud
+  # zipkin:
+  #   baseUrl: http://tracing-server:9411
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://bens-discovery-server.apps.tas.workload.tkglab.tanzu-demo.net/eureka
