--- a/admin-server.yml
+++ b/admin-server.yml
@@ -1,5 +1,9 @@
 spring:
   profiles: default
+eureka:
+  instance:
+    # enable to register multiple app instances with a random server port
+    instance-id: ${spring.application.name}:${random.uuid}
 
 ---
 spring:
