Modifying the discovery config for cloud running

--- a/discovery-server.yml
+++ b/discovery-server.yml
@@ -13,6 +13,6 @@ server:
   profiles: cloud
 eureka:
   instance:
-    #hostname: ${vcap.application.uris[0]}
+    hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
-    preferIpAddress: true
+    preferIpAddress: false
