--- a/admin-server.yml
+++ b/admin-server.yml
@@ -22,3 +22,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://bens-discovery-server.apps.tas.tanzu-demo.net/eureka
+    healthcheck:
+      enabled: true
+  instance:
+    hostname: ${vcap.application.uris[0]}
+    nonSecurePort: 80
