Trying to improve results with admin server

--- a/application.yml
+++ b/application.yml
@@ -25,6 +25,8 @@ spring:
     hibernate:
       ddl-auto: none
 
+# Set the actuator port to match the application's
+management.port: ${PORT}
 # Spring Boot 1.5 makes actuator secure by default
 management.security.enabled: false
 # Enable all Actuators and not only the two available by default /health and /info starting Spring Boot 2.0
