--- a/discovery-checker.yml
+++ b/discovery-checker.yml
@@ -16,8 +16,11 @@ eureka:
 ---
 spring:
   profiles: cloud
-  # zipkin:
-  #   baseUrl: http://tracing-server:9411
+  boot:
+    admin:
+      client:
+        instance:
+          service-base-url: http://${vcap.application.uris[0]}
 eureka:
   client:
     serviceUrl:
