--- a/config-checker.yml
+++ b/config-checker.yml
@@ -27,4 +27,6 @@ eureka:
   instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
+    metadataMap:
+      management.port: 80
 message: ola!
