More changes to try and improve admin

--- a/admin-server.yml
+++ b/admin-server.yml
@@ -29,7 +29,8 @@ eureka:
     healthcheck:
       enabled: true
   instance:
+    leaseRenewalIntervalInSeconds: 10
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
-    metadataMap:
+    metadata-map:
       management.port: 80
