--- a/config-checker.yml
+++ b/config-checker.yml
@@ -27,6 +27,6 @@ eureka:
   instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
-    metadataMap:
+    metadata-map:
       management.port: 80
 message: ola!
