--- a/discovery-server.yml
+++ b/discovery-server.yml
@@ -14,5 +14,5 @@ eureka:
   instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
-    metadataMap:
+    metadata-map:
       management.port: 80
