Trying to get health right in the admin server on cloud profile

--- a/discovery-checker.yml
+++ b/discovery-checker.yml
@@ -30,6 +30,9 @@ eureka:
   instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
+    health-check-url-path: /actuator/health
     metadata-map:
       management.port: 80
       health.path: /actuator/health
+      applicationId: ${vcap.application.application_id}
+      instanceId: ${vcap.application.instance_index}
