--- a/config-checker.yml
+++ b/config-checker.yml
@@ -1,5 +1,3 @@
-message: haloha
-
 spring:
   profiles: default
 eureka:
@@ -18,6 +16,11 @@ eureka:
 ---
 spring:
   profiles: cloud
+  boot:
+    admin:
+      client:
+        instance:
+          service-base-url: http://${vcap.application.uris[0]}
 eureka:
   client:
     serviceUrl:
