--- a/discovery-checker.yml
+++ b/discovery-checker.yml
@@ -1,17 +1,17 @@
-spring:
-  profiles: default
-eureka:
-  instance:
+# spring:
+#   profiles: default
+# eureka:
+#   instance:
     # enable to register multiple app instances with a random server port
-    instance-id: ${spring.application.name}:${random.uuid}
+    # instance-id: ${spring.application.name}:${random.uuid}
 
----
-spring:
-  profiles: docker
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+# ---
+# spring:
+#   profiles: docker
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://discovery-server:8761/eureka/
 
 ---
 spring:
@@ -31,7 +31,8 @@ eureka:
   instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
-    healthCheckUrlPath: /actuator/health
+    # statusPageUrlPath: /actuator/info
+    # healthCheckUrlPath: /actuator/health
     metadata-map:
       management.port: 80
       # health.path: /actuator/health
