--- a/discovery-checker.yml
+++ b/discovery-checker.yml
@@ -31,6 +31,7 @@ eureka:
   instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
+    healthCheckUrl: http://${vcap.application.uris[0]}/actuator/health
     # statusPageUrlPath: /actuator/info
     # healthCheckUrlPath: /actuator/health
     metadata-map:
