--- a/admin-server.yml
+++ b/admin-server.yml
@@ -1,17 +1,17 @@
-spring:
-  profiles: default
-eureka:
-  instance:
-    # enable to register multiple app instances with a random server port
-    instance-id: ${spring.application.name}:${random.uuid}
+# spring:
+#   profiles: default
+# eureka:
+#   instance:
+#     # enable to register multiple app instances with a random server port
+#     instance-id: ${spring.application.name}:${random.uuid}
 
----
-spring:
-  profiles: docker
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+# ---
+# spring:
+#   profiles: docker
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://discovery-server:8761/eureka/
 
 ---
 spring:
@@ -33,6 +33,8 @@ eureka:
     leaseRenewalIntervalInSeconds: 10
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
+    healthCheckUrl: http://${vcap.application.uris[0]}/actuator/health
     metadata-map:
       management.port: 80
-      health.path: /actuator/health
+      applicationId: ${vcap.application.application_id}
+      instanceId: ${vcap.application.instance_index}
