--- a/admin-server.yml
+++ b/admin-server.yml
@@ -25,16 +25,16 @@ spring:
 eureka:
   client:
     registryFetchIntervalSeconds: 5
-    serviceUrl:
-      defaultZone: http://bens-discovery-server.apps.tas.tanzu-demo.net/eureka
-    healthcheck:
-      enabled: true
+    # serviceUrl:
+    #   defaultZone: http://bens-discovery-server.apps.tas.tanzu-demo.net/eureka
+    # healthcheck:
+    #   enabled: true
   instance:
     leaseRenewalIntervalInSeconds: 10
-    hostname: ${vcap.application.uris[0]}
-    nonSecurePort: 80
-    healthCheckUrl: http://${vcap.application.uris[0]}/actuator/health
-    metadata-map:
-      management.port: 80
-      applicationId: ${vcap.application.application_id}
-      instanceId: ${vcap.application.instance_index}
+    # hostname: ${vcap.application.uris[0]}
+    # nonSecurePort: 80
+    # healthCheckUrl: http://${vcap.application.uris[0]}/actuator/health
+    # metadata-map:
+    #   management.port: 80
+    #   applicationId: ${vcap.application.application_id}
+    #   instanceId: ${vcap.application.instance_index}
