--- a/visits-service.yml
+++ b/visits-service.yml
@@ -1,28 +1,28 @@
-﻿spring:
-  profiles: default
-eureka:
-  instance:
-    # enable to register multiple app instances with a random server port
-    instance-id: ${spring.application.name}:${random.uuid}
+﻿# spring:
+#   profiles: default
+# eureka:
+#   instance:
+#     # enable to register multiple app instances with a random server port
+#     instance-id: ${spring.application.name}:${random.uuid}
 
----
-spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
-server:
-  port: 8082
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+# ---
+# spring:
+#   profiles: docker
+#   zipkin:
+#     baseUrl: http://tracing-server:9411
+# server:
+#   port: 8082
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://discovery-server:8761/eureka/
 
----
-spring:
-  profiles: cloud
-  # zipkin:
-  #   baseUrl: http://tracing-server:9411
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://bens-discovery-server.apps.tas.workload.tkglab.tanzu-demo.net/eureka
+# ---
+# spring:
+#   profiles: cloud
+#   # zipkin:
+#   #   baseUrl: http://tracing-server:9411
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://bens-discovery-server.apps.tas.workload.tkglab.tanzu-demo.net/eureka
