--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -16,23 +16,22 @@ server:
 # Internationalization
 spring.messages.basename: messages/messages
 
----
-spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+# ---
+# spring:
+#   profiles: docker
+#   zipkin:
+#     baseUrl: http://tracing-server:9411
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://discovery-server:8761/eureka/
 
----
----
-spring:
-  profiles: cloud
-  # zipkin:
-  #   baseUrl: http://tracing-server:9411
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://bens-discovery-server.apps.tas.workload.tkglab.tanzu-demo.net/eureka
+# ---
+# spring:
+#   profiles: cloud
+#   # zipkin:
+#   #   baseUrl: http://tracing-server:9411
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://bens-discovery-server.apps.tas.workload.tkglab.tanzu-demo.net/eureka
