--- a/admin-server.yml
+++ b/admin-server.yml
@@ -15,26 +15,13 @@
 
 ---
 spring:
-  profiles: cloud
+  profiles: tas
   boot:
     admin:
       discovery:
         enabled: true
-  # zipkin:
-  #   baseUrl: http://tracing-server:9411
 eureka:
   client:
     registryFetchIntervalSeconds: 5
-    # serviceUrl:
-    #   defaultZone: http://bens-discovery-server.apps.tas.tanzu-demo.net/eureka
-    # healthcheck:
-    #   enabled: true
   instance:
     leaseRenewalIntervalInSeconds: 10
-    # hostname: ${vcap.application.uris[0]}
-    # nonSecurePort: 80
-    # healthCheckUrl: http://${vcap.application.uris[0]}/actuator/health
-    # metadata-map:
-    #   management.port: 80
-    #   applicationId: ${vcap.application.application_id}
-    #   instanceId: ${vcap.application.instance_index}
