--- a/application.yml
+++ b/application.yml
@@ -31,12 +31,12 @@ management.port: ${PORT}
 management.security.enabled: false
 # Enable all Actuators and not only the two available by default /health and /info starting Spring Boot 2.0
 management.endpoints.web.exposure.include: "*"
+# Show detailed health
 management.endpoint.health.show-details: ALWAYS
 
 # Temporary hack required by the Spring Boot 2 / Spring Cloud Finchley branch
 # Waiting issue https://github.com/spring-projects/spring-boot/issues/13042
 spring.cloud.refresh.refreshable: false
-
 
 # Logging
 logging.level.org.springframework: INFO
