added a zipkin base url to the tas profile of the application-tas.yml

--- a/application-tas.yml
+++ b/application-tas.yml
@@ -1,8 +1,8 @@
 ---
 spring:
   profiles: tas
-  # zipkin:
-  #   baseUrl: http://tracing-server:9411
+  zipkin:
+    baseUrl: http://bens-zipkin-server.apps.tas.tanzu-demo.net
 eureka:
   client:
     serviceUrl:
