--- a/application-tas.yml
+++ b/application-tas.yml
@@ -2,6 +2,7 @@
 spring:
   profiles: tas
   zipkin:
+    enabled: true
     baseUrl: http://bens-zipkin-server.apps.tas.tanzu-demo.net
 eureka:
   client:
