--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -13,7 +13,7 @@ spring:
   cloud:
     loadbalancer:
       ribbon:
-        enabled: false
+        enabled: true
     gateway:
       routes:
         - id: vets-service
