--- a/application-tas.yml
+++ b/application-tas.yml
@@ -3,7 +3,7 @@ spring:
   profiles: tas
   zipkin:
     enabled: true
-    baseUrl: http://bens-zipkin-server.apps.tas.tanzu-demo.net
+    baseUrl: http://bens-zipkin-server.apps.tas.tanzu-demo.net:80
 eureka:
   client:
     serviceUrl:
