trying an unsecure trust manager setting for the gateway

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -34,3 +34,6 @@ spring:
             - Path=/api/customer/**
           filters:
             - StripPrefix=2
+      httpclient:
+        ssl:
+          useInsecureTrustManager: true
