--- a/application.yml
+++ b/application.yml
@@ -39,7 +39,7 @@ management.endpoint.health.show-details: ALWAYS
 spring.cloud.refresh.refreshable: false
 
 # Logging
-logging.level.org.springframework: INFO
+logging.level.root: INFO
 
 # Metrics
 management:
