--- a/application-kubernetes.yml
+++ b/application-kubernetes.yml
@@ -3,7 +3,7 @@ spring:
     enabled: true
     discoveryClientEnabled: false
     messageTimeout: 10
-    baseUrl: http://zipkin-server-service.default.svc.cluster.local:9411
+    baseUrl: http://tracing-server-service.default.svc.cluster.local:9411
     sender:
       type: web
 eureka:
