--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ server:
 # embedded database init, supports mysql too trough the 'mysql' spring profile
 spring:
   zipkin:
-    enabled: false
+    enabled: true
   datasource:
     schema: classpath*:db/hsqldb/schema.sql
     data: classpath*:db/hsqldb/data.sql
