--- a/application.yml
+++ b/application.yml
@@ -10,6 +10,7 @@ server:
 spring:
   zipkin:
     enabled: true
+    baseUrl: http://localhost:9411
   datasource:
     schema: classpath*:db/hsqldb/schema.sql
     data: classpath*:db/hsqldb/data.sql
