cleaned up the configuration, removing unused files

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,8 +1,15 @@
+# Settings for the API GATEWAY server.
+
 server:
   compression:
     enabled: true
     mime-types: application/json,text/css,application/javascript
     min-response-size: 2048
+
+eureka:
+  sleuth:
+    reactor:
+      decorate-on-each: false
 
 # Internationalization
 #spring.messages.basename: messages/messages
