--- a/application-docker.yml
+++ b/application-docker.yml
@@ -1,4 +1,4 @@
-# Register using IP Address
+# Settings given to ALL applications started under the KUBERNETES profile
 eureka:
   instance:
-    preferIpAddress: true
+    preferIpAddress: true # Register using IP Address
