--- a/application.yml
+++ b/application.yml
@@ -22,9 +22,9 @@ spring:
   cloud:
     refresh:
       refreshable: false # Temporary hack required by the Spring Boot 2 / Spring Cloud Finchley branch. Waiting issue https://github.com/spring-projects/spring-boot/issues/13042
-    config:
-      allowOverride: true # Allow the microservices to override the remote properties with their own System properties or config file
-      overrideNone: true # Override configuration with any local property source
+#    config:
+#      allowOverride: true # Allow the microservices to override the remote properties with their own System properties or config file
+#      overrideNone: true # Override configuration with any local property source
   jpa:
     open-in-view: false
     hibernate:
