--- a/application.yml
+++ b/application.yml
@@ -10,6 +10,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${DISCOVERY_SERVER_URI} # Use the DISCOVERY_SERVER_URI environment variable as the endpoint (e.g. http://localhost:8761/eureka)
+    healthcheck:
+      enabled: true
 
 # Spring Boot settings
 spring:
