--- a/vets-service.yml
+++ b/vets-service.yml
@@ -8,7 +8,7 @@ spring:
     active: production
   cache:
     cache-names: vets
-eureka:
-  instance:
-    hostname: ${VETS_SERVICE_SERVICE_PORT_8083_TCP_ADDR}
-    nonSecurePort: 8083
+# eureka:
+#   instance:
+#     hostname: ${VETS_SERVICE_SERVICE_PORT_8083_TCP_ADDR}
+#     nonSecurePort: 8083
