--- a/application-docker.yml
+++ b/application-docker.yml
@@ -1,4 +1,6 @@
-# Settings given to ALL applications started under the KUBERNETES profile
+# Settings given to ALL applications started under the DOCKER profile
+
+# Register using IP Address
 eureka:
   instance:
     preferIpAddress: true # Register using IP Address
