--- a/application.yml
+++ b/application.yml
@@ -16,9 +16,11 @@ eureka:
     preferIpAddress: true # Included here in the main application.yml as a workaround for https://github.com/spring-cloud/spring-cloud-config/issues/1783     
 
 # Spring Boot settings
+
 spring:
   zipkin:
     enabled: true
+    discovery-client-enabled: false
     baseUrl: ${TRACING_SERVER_URI} # Use the TRACING_SERVER_URI environment variable as the endpoint (e.g. http://localhost:9411)
   datasource:
     schema: classpath*:db/hsqldb/schema.sql
