--- a/application.yml
+++ b/application.yml
@@ -43,7 +43,7 @@ management:
     enabled: false # Spring Boot 1.5 makes actuator secure by default
   endpoints:
     web:
-      exposure.include: '*' # Enable all Actuators and not only the two available by default /health and /info starting Spring Boot 2.0
+      exposure.include: "*" # Enable all Actuators and not only the two available by default /health and /info starting Spring Boot 2.0
   endpoint:
     health:
       show-details: ALWAYS # Show detailed health
