--- a/application.yml
+++ b/application.yml
@@ -16,7 +16,6 @@ eureka:
     preferIpAddress: true # Included here in the main application.yml as a workaround for https://github.com/spring-cloud/spring-cloud-config/issues/1783     
 
 # Spring Boot settings
-
 spring:
   zipkin:
     enabled: true
@@ -36,17 +35,20 @@ spring:
     hibernate:
       ddl-auto: none
 
-# Actuator settings
+# Spring Boot Actuator settings
 management:
   port: ${PORT} # Set the actuator PORT to match the application's PORT as set in the ENV
   security:
     enabled: false # Spring Boot 1.5 makes actuator secure by default
   endpoints:
+    enabled-by-default: true
+    shutdown:
+      enabled: true
     web:
-      exposure.include: "*" # Enable all Actuators and not only the two available by default /health and /info starting Spring Boot 2.0
+      exposure.include: '*' # Enable all Actuators and not only the two available by default /health and /info starting Spring Boot 2.0
   endpoint:
     health:
-      show-details: ALWAYS # Show detailed health
+      show-details: always # Show detailed health
     metrics:
       enabled: true
     prometheus:
@@ -55,5 +57,3 @@ management:
 # Logging levels
 #logging:
 #  level.root: INFO
-
-
