--- a/vets-service.yml
+++ b/vets-service.yml
@@ -3,8 +3,10 @@ vets:
   cache:
     ttl: 60
     heap-size: 100
-spring:
-  profiles:
-    active: production
-  cache:
-    cache-names: vets
+
+# Configuration rules changed in Spring Boot 2.4.x see: https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-Config-Data-Migration-Guide
+#spring:
+#  profiles:
+#    active: production
+#  cache:
+#    cache-names: vets
