--- a/application.yml
+++ b/application.yml
@@ -18,16 +18,16 @@ eureka:
 # Spring Boot settings
 
 spring:
-  zipkin:
-    enabled: true
-    discovery-client-enabled: false
-    baseUrl: ${TRACING_SERVER_URI} # Use the TRACING_SERVER_URI environment variable as the endpoint (e.g. http://localhost:9411)
+#  zipkin:
+#    enabled: true
+#    discovery-client-enabled: false
+#    baseUrl: ${TRACING_SERVER_URI} # Use the TRACING_SERVER_URI environment variable as the endpoint (e.g. http://localhost:9411)
   datasource:
     schema: classpath*:db/hsqldb/schema.sql
     data: classpath*:db/hsqldb/data.sql
-  cloud:
-    refresh:
-      refreshable: false # Temporary hack required by the Spring Boot 2 / Spring Cloud Finchley branch. Waiting issue https://github.com/spring-projects/spring-boot/issues/13042
+#  cloud:
+#    refresh:
+#      refreshable: false # Temporary hack required by the Spring Boot 2 / Spring Cloud Finchley branch. Waiting issue https://github.com/spring-projects/spring-boot/issues/13042
 #    config:
 #      allowOverride: true # Allow the microservices to override the remote properties with their own System properties or config file
 #      overrideNone: true # Override configuration with any local property source
